[workspace]
resolver = "2"

members = [
    "gaia-stub",
    "structpack",
    "gaia-tmtc",
    "gaia-ccsds-c2a",
    "tmtc-c2a",
]

exclude = [
    # WASM 用の別の cargo workspace であるため
    # ビルド時はdevtools_frontend/crates が OUT_DIR 以下にコピーされた後wasm-pack buildされるため
    "target",
]

[workspace.package]
version = "1.0.0"
description = "A command and control system for C2A-based satellites"
repository = "https://github.com/arkedge/gaia"
license = "MPL-2.0"

[workspace.dependencies]
gaia-stub = { path = "./gaia-stub" }
gaia-ccsds-c2a = { path = "./gaia-ccsds-c2a" }
gaia-tmtc = { path = "./gaia-tmtc" }
structpack = { path = "./structpack" }
tmtc-c2a = { path = "./tmtc-c2a" }
